- Improved Tools::Login() to avoid unneccessary logins
- Created FritzClient to act as an facade to the FB which uses tcpclient::HttpClient.
  FritzClient handles all communication to the FB including login. The consumer just 
  uses one of the following methods to get information from the FB
  * RequestCallList()
  * RequestLocationSettings()
  * RequestSipSettings()
  * RequestFonbook()
  This class uses a mutex to automatically serialize multiple instances of itself. The lock 
  is aquired at creation and released at destruction of the class instance. Removed mutex
  in Tools.
- Login() and GetLang() moved as private methods to FritzClient
- Code cleanup and introduction of RETRY_* macros for easy retry handling when 
  communicating with the FB

2009-09-13:
- Fixed entity decoding in FritzFonbook.cpp

2009-09-14:
- Added sort routines in CallList and Fonbook

2009-11-16:
- Adapted to changes in tcpclient++
  * fixed TcpClient to throw correct exceptions on connect. This fixes detection 
    of disabled call monitor, the corresponding hint "dial #96*5*" is now shown in 
    syslog again

2009-11-21:
- Improved matching of phone numbers: Fritz!Box control codes *xxx# are now ignored.

2009-11-29:
- Added missing include <cstring> in FritzClient.cpp

2009-12-08:
- Fixed retry delay calculation in case of connection refused

2010-01-17:
- Fixed a possible segfault when sorting calllists and fonbooks

2010-01-18:
- Added Config::SetupPorts() to provide non-standard ports
- Fixed some warnings about ununsed parameters in base-classes and empty implementations
- Removed useless check in CallList::RetrieveEntry()

2010-01-25:
- FritzClient::Login() now returns a bool wether login was successful
- FritzClient::hasValidPassword() can now be used to determine the result of the last Login()
- Tools::GetLocationSettings() now returns a bool wether the password used 
  to access the FB was valid

  
  